cpp data loading working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
-cmake_minimum_required(VERSION 3.8)
-project(cuVAE2 LANGUAGES CXX CUDA)
+cmake_minimum_required(VERSION 3.10)
+project(VAE_MNIST LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CUDA_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(CUDA REQUIRED)
 
-add_executable(vae src/main.cu)
+include_directories(${CUDA_INCLUDE_DIRS})
 
-target_include_directories(vae PRIVATE include)
-
+add_executable(vae src/main.cu src/mnist_loader.cpp)
 target_link_libraries(vae ${CUDA_LIBRARIES})
